--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <script src ="scripts/main.js"></script>
 </head>
 <body onload="init()">
-  <canvas id="main-canvas" width="900" height="510">
+  <canvas id="main-canvas" width="900" height="510" style="border: 2px solid #000;">
   </canvas>
 </body>
