--- a/index.html
+++ b/index.html
@@ -4,4 +4,13 @@
 <body onload="init()">
   <canvas id="main-canvas" width="900" height="510" style="border: 2px solid #000;">
   </canvas>
+  <h3> Score </h3>
+  <table style="text-align: center; border:2px solid black;">
+    <tr style = "border-bottom: 2px solid black;">
+      <th>Player</th><th>Computer</th>
+    </tr>
+    <tr style="text-align: center;">
+    <td class="playerScore"></td><td class="computerScore"></td>
+    </tr>
+  </table>
 </body>
