--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <tr style="text-align: center;">
     <td class="playerScore"></td><td class="computerScore"></td>
     </tr>
+    <tr><td id="results" style="text-align: center;"></td> </tr>
   </table>
 </body>
